syntax = "proto3";

package api.v1;

import "google/protobuf/timestamp.proto";

message User {
    int32 id = 1;
    string email = 2;
    string username = 3;
    optional string password = 4;
    optional string refreshToken = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateUserDto {
    string email = 1;
    string password = 2;
    optional string username = 3;
}

message TokenPayload {
    string userId = 1;
    string email = 2;
}

message Profile {
    int32 id = 1;
    int32 userId = 2;
    string bio = 3;
    string location = 4;
    string website = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
}

message CreateProfileDto {
    int32 userId = 1;
    string bio = 2;
    string location = 3;
    string website = 4;
}